cabal-version: 2.4
name: releaser
synopsis: Automation of Haskell package release process
version: 0.2.0.0
license: Apache-2.0
license-file: LICENSE
maintainer: domen@dev.si
author: Domen Kozar
category: Development
extra-source-files:
    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/domenkozar/releaser/

library
    exposed-modules:
        Releaser.Primitives
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    build-depends:
        base >=4.7 && <5,
        Cabal -any,
        regex-tdfa -any,
        regex-tdfa-text -any,
        process -any,
        pretty-terminal -any,
        text -any

executable releaser
    main-is: Main.hs
    default-language: Haskell2010
    hs-source-dirs: releaser
    other-modules:
        Paths_releaser
    autogen-modules:
        Paths_releaser
    build-depends:
        base -any,
        releaser -any
